[gd_scene load_steps=13 format=3 uid="uid://fpt6bcoxkgya"]

[ext_resource type="Script" uid="uid://if37kd6frpvv" path="res://scripts/views/core/index.gd" id="1_dgce3"]
[ext_resource type="StyleBox" uid="uid://y8miqubgdclm" path="res://styles/titlebar.tres" id="2_emp5w"]
[ext_resource type="StyleBox" uid="uid://bqnenwfumbd81" path="res://styles/background.tres" id="3_6d62a"]
[ext_resource type="StyleBox" uid="uid://c2xiy1280hdc4" path="res://styles/button/disabled.tres" id="4_qjqxx"]
[ext_resource type="StyleBox" uid="uid://b7ader8k7a7ku" path="res://styles/button/hover.tres" id="5_e7551"]
[ext_resource type="StyleBox" uid="uid://diawquccegehf" path="res://styles/button/pressed.tres" id="6_e1gps"]
[ext_resource type="StyleBox" uid="uid://dyevpaml4qpk4" path="res://styles/button/normal.tres" id="7_ahtpi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_10nys"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u2uj8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fp8g8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_um84q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oijap"]

[node name="ViewRoot" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
script = ExtResource("1_dgce3")

[node name="TopBar" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_emp5w")

[node name="Title" type="Label" parent="TopBar"]
layout_mode = 2
text = "Logic Workbench"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="TopBar"]
layout_mode = 2
alignment = 2

[node name="CloseButton" type="Button" parent="TopBar/Buttons"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Close"
flat = true

[node name="Content" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_6d62a")

[node name="Columns" type="HBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="MainCategories" type="PanelContainer" parent="Content/Columns"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_10nys")

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Columns/MainCategories"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Projects" type="Button" parent="Content/Columns/MainCategories/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
toggle_mode = true
text = "Projects"

[node name="Settings" type="Button" parent="Content/Columns/MainCategories/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
toggle_mode = true
text = "Settings"

[node name="Credits" type="Button" parent="Content/Columns/MainCategories/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
toggle_mode = true
text = "Credits"

[node name="Quit" type="Button" parent="Content/Columns/MainCategories/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
text = "Quit"

[node name="SubCategories" type="PanelContainer" parent="Content/Columns"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_10nys")

[node name="Projects" type="VBoxContainer" parent="Content/Columns/SubCategories"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Load" type="Button" parent="Content/Columns/SubCategories/Projects"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
toggle_mode = true
text = "Load Project"

[node name="Import" type="Button" parent="Content/Columns/SubCategories/Projects"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
disabled = true
toggle_mode = true
text = "Import Project"

[node name="New" type="Button" parent="Content/Columns/SubCategories/Projects"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
disabled = true
toggle_mode = true
text = "New Project"

[node name="Settings" type="VBoxContainer" parent="Content/Columns/SubCategories"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="General" type="Button" parent="Content/Columns/SubCategories/Settings"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
text = "General"

[node name="Audio" type="Button" parent="Content/Columns/SubCategories/Settings"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
text = "Audio"

[node name="Display" type="Button" parent="Content/Columns/SubCategories/Settings"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
text = "Display"

[node name="Simulation" type="Button" parent="Content/Columns/SubCategories/Settings"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
text = "Simulation"

[node name="Colors" type="Button" parent="Content/Columns/SubCategories/Settings"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
text = "Colors"

[node name="Credits" type="VBoxContainer" parent="Content/Columns/SubCategories"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Text" type="RichTextLabel" parent="Content/Columns/SubCategories/Credits"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxEmpty_fp8g8")
theme_override_styles/background = SubResource("StyleBoxEmpty_fp8g8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fp8g8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fp8g8")
bbcode_enabled = true
text = "[color=purple][b]Damaged Engineers :[/b][/color]
[ul] Mindful
 Aariion[/ul]

[color=red][b]Senior Developers :[/b][/color]
[ul] FoxFireFive
 LogicWorkbenchMusic[/ul]

[color=orange][b]Developers :[/b][/color]
[ul] Ahazz Khan
 BobisBilly[/ul]

[color=green][b]Special Thanks :[/b][/color]
[ul] [url=https://youtube.com/@ajax123z]Ajax[/url]
 RascalFoxfire[/ul]"

[node name="ProjectSubCategorie" type="PanelContainer" parent="Content/Columns"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_10nys")

[node name="LoadProject" type="HBoxContainer" parent="Content/Columns/ProjectSubCategorie"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Left" type="VBoxContainer" parent="Content/Columns/ProjectSubCategorie/LoadProject"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Load" type="Button" parent="Content/Columns/ProjectSubCategorie/LoadProject/Left"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
text = "Load"

[node name="List" type="ItemList" parent="Content/Columns/ProjectSubCategorie/LoadProject/Left"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_um84q")
theme_override_styles/panel = SubResource("StyleBoxEmpty_oijap")
allow_rmb_select = true

[node name="Right" type="VBoxContainer" parent="Content/Columns/ProjectSubCategorie/LoadProject"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="Cancel" type="Button" parent="Content/Columns/ProjectSubCategorie/LoadProject/Right"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2uj8")
theme_override_styles/disabled = ExtResource("4_qjqxx")
theme_override_styles/hover = ExtResource("5_e7551")
theme_override_styles/pressed = ExtResource("6_e1gps")
theme_override_styles/normal = ExtResource("7_ahtpi")
toggle_mode = true
text = "Cancel"

[node name="Name" type="Label" parent="Content/Columns/ProjectSubCategorie/LoadProject/Right"]
layout_mode = 2
text = "Name : Example Project"
vertical_alignment = 1

[node name="Tags" type="Label" parent="Content/Columns/ProjectSubCategorie/LoadProject/Right"]
layout_mode = 2
text = "Tags : Example, Prototype, WIP"
vertical_alignment = 1

[node name="Description" type="Label" parent="Content/Columns/ProjectSubCategorie/LoadProject/Right"]
custom_minimum_size = Vector2(300, 234)
layout_mode = 2
text = "Description : Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
autowrap_mode = 3
text_overrun_behavior = 4

[node name="BottomBar" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_emp5w")

[node name="Version" type="Label" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 0
text = "Version 3.0.0.0"
vertical_alignment = 1

[node name="Credits" type="Label" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 8
text = "Damaged Engineer Interactive @ 2025"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="mouse_entered" from="TopBar" to="." method="_top_bar_mouse_entered"]
[connection signal="mouse_exited" from="TopBar" to="." method="_top_bar_mouse_exited"]
[connection signal="pressed" from="TopBar/Buttons/CloseButton" to="." method="_close_button_pressed"]
[connection signal="toggled" from="Content/Columns/MainCategories/VBoxContainer/Projects" to="." method="_projects_toggled"]
[connection signal="toggled" from="Content/Columns/MainCategories/VBoxContainer/Settings" to="." method="_settings_toggled"]
[connection signal="toggled" from="Content/Columns/MainCategories/VBoxContainer/Credits" to="." method="_credits_toggled"]
[connection signal="pressed" from="Content/Columns/MainCategories/VBoxContainer/Quit" to="." method="_quit_pressed"]
[connection signal="toggled" from="Content/Columns/SubCategories/Projects/Load" to="." method="_projects_load_toggled"]
[connection signal="meta_clicked" from="Content/Columns/SubCategories/Credits/Text" to="." method="_text_meta_clicked"]
[connection signal="button_down" from="Content/Columns/ProjectSubCategorie/LoadProject/Left/Load" to="." method="_projects_sub_load_button_down"]
[connection signal="item_clicked" from="Content/Columns/ProjectSubCategorie/LoadProject/Left/List" to="." method="_list_item_clicked"]
[connection signal="toggled" from="Content/Columns/ProjectSubCategorie/LoadProject/Right/Cancel" to="." method="_cancel_toggled"]
